# sql-in-haskell

./: .gitignore  readme.md  sql-in-haskell.cabal
src/: Main.hs  Parser.hs  Spec.hs
