name:                 sql-in-haskell
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Alan Foster
maintainer:           alan@alanfoster.me
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable sql-in-haskell
  main-is:              Main.hs
  ghc-options:     -Wall
  build-depends:        parsec == 3.1.1
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
  other-modules:
    Parser

test-suite test-sql-in-haskell
  type:                 exitcode-stdio-1.0
  ghc-options:     -Wall
  main-is:              Spec.hs
  build-depends:        parsec == 3.1.1
  build-depends:        hspec == 2.5.5
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
  other-modules:
    Parser
